--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -27,10 +27,6 @@
                               displayTemplate="R: {value}" onSlideEnd="handleR()"/>
                 </div>
             </div>
-            <form class="center-aligner" method="get" action="main">
-                <input type="hidden" name="mode" value="csv"/>
-                <button id="download-points" type="submit" class="btn-submit">Export points</button>
-            </form>
         </div>
 
         <div class="grid-item center-aligner">
@@ -39,11 +35,12 @@
                     <fieldset class="shadowed-box">
                         <div class="input" id="x">
                             <div class="center-aligner">
+                                <h:inputHidden id="x-hidden" value="#{formBean.x}"/>
                                 <div>
                                     <h:outputText id="x-display" value="X: #{formBean.x}"/>
                                     <ui:repeat value="#{[-3,-2,-1,0,1,2,3,4,5]}" var="val">
                                         <p:commandLink value="#{val}" action="#{formBean.setX(val)}"
-                                                       update=":form:x-display"
+                                                       update=":form:x-display :form:x-hidden"
                                                        style="margin: 0 4px;"/>
                                     </ui:repeat>
                                 </div>
@@ -58,7 +55,7 @@
                             </div>
                         </div>
                         <div class="center-aligner">
-                            <p:commandButton value="Submit" styleClass="btn-submit"
+                            <p:commandButton id="form-submit" value="Submit" styleClass="btn-submit"
                                              action="#{resultsBin.checkHit}"
                                              update="requestTable"
                                              disableOnAjax="false"/>
@@ -80,8 +77,8 @@
                             <p:commandButton styleClass="btn-submit" value="Clear points"
                                              action="#{resultsBin.clear}"
                                              update="requestTable"
-                                             process="@this"/>
-
+                                             process="@this"
+                                             oncomplete="clearCanvas()"/>
                             <p:commandButton icon="pi pi-arrow-right" styleClass="btn-submit"
                                              action="#{resultsBin.nextPage}"
                                              update="requestTable"
@@ -92,11 +89,11 @@
                                 <f:selectItem itemValue="5" itemLabel="5"/>
                                 <f:selectItem itemValue="10" itemLabel="10"/>
                                 <f:selectItem itemValue="15" itemLabel="15"/>
-                                <p:ajax update="requestTable" listener="#{resultsBin.onPageSizeChange}" process="@this"/>
+                                <p:ajax update="requestTable" listener="#{resultsBin.onPageSizeChange}"
+                                        process="@this"/>
                             </p:selectOneMenu>
                         </div>
                     </h:form>
-
                     <h:panelGroup id="requestTable">
                         <table style="width: 100%">
                             <thead>
@@ -120,6 +117,9 @@
                                     <td>#{dot.getExecution_time()}</td>
                                 </tr>
                             </ui:repeat>
+                            <script>
+                                drawDots();
+                            </script>
                             </tbody>
                         </table>
                     </h:panelGroup>
