advanced table basic functionality done

--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -3,41 +3,36 @@
       xmlns:h="jakarta.faces.html"
       xmlns:custom="http://ifmo.se/tags/custom">
 
-    <h:head>
-        <title>Список сотрудников</title>
-        <h:outputStylesheet name="css/advanced-table.css" />
-    </h:head>
+<h:head>
+    <h:outputStylesheet name="css/advanced-table.css"/>
+</h:head>
 
-    <h:body>
-        <h:form>
-            <custom:advancedTable value="#{employeeBean.employees}"
-                                var="emp"
-                                exportable="true"
-                                groupable="true">
+<h:body>
+    <h:form>
+        <custom:advancedTable value="#{resultsBin.dots}"
+                              var="item"
+                              exportable="true">
 
-                <custom:column field="name"
-                             headerText="ФИО"
-                             sortable="true"
-                             filterPattern="^[А-Яа-яЁё\s]{2,50}$"
-                             minLength="2"
-                             maxLength="50"/>
+            <custom:column field="x"
+                           headerText="x"
+                           sortable="true"
+                           minValue="-3"
+                           maxValue="3"
+            />
 
-                <custom:column field="salary"
-                             headerText="Зарплата"
-                             sortable="true"
-                             minValue="30000"
-                             maxValue="500000"/>
+            <custom:column field="y"
+                           headerText="y"
+                           sortable="true"
+                           minValue="-3"
+                           maxValue="3"/>
 
-                <custom:column field="department"
-                             headerText="Отдел"
-                             groupable="true"
-                             filterPattern="^(HR|IT|Продажи|Маркетинг)$"/>
-
-                <custom:column field="hireDate"
-                             headerText="Дата приема"
-                             sortable="true"/>
-
-            </custom:advancedTable>
-        </h:form>
-    </h:body>
+            <custom:column field="r"
+                           headerText="r"
+                           groupable="true"/>
+            <custom:column field="hit"
+                           headerText="Hit"
+                           sortable="true"/>
+        </custom:advancedTable>
+    </h:form>
+</h:body>
 </html>
