--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -27,8 +27,7 @@
                            maxValue="3"/>
 
             <custom:column field="r"
-                           headerText="r"
-                           groupable="true"/>
+                           headerText="r"/>
             <custom:column field="hit"
                            headerText="Hit"
                            sortable="true"/>
